Fix spacing and handle broken images

--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,6 @@ body {
 }
 
 #uploadBar {
+  padding-left: 45px;
   margin: 0px;
 }
